# cmake-build-gcc

./: CMakeLists.txt  ExtProj.cmake  README.md  build.cmake  build_gcc.cmake  gcc-dev.sh  gcc.cmake  gmp.cmake  isl.cmake  libraries.json  mpc.cmake  mpfr.cmake  options.cmake  troubleshooting.md  zstd.cmake
cmake/: ExtProj.cmake  FindAutotools.cmake  gcc.cmake  gmp.cmake  isl.cmake  mpc.cmake  mpfr.cmake  options.cmake  zstd.cmake
doc/: macos-System-path.txt  macos-fail-stage1.txt  macos-zstd-bug.txt
